--- a/style.css
+++ b/style.css
@@ -12,64 +12,55 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-h1 {
-    font-size: 2.5rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-bottom: 3rem;
-    margin-top: 2rem;
-    text-align: center;
-    font-weight: 100;
-}
-
-h6 {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    font-weight: 100;
-}
-
-form {
-    margin-top: 3rem;
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: greenyellow;
-    border: 1px border black;
-    width: 80vw;
-    height: 50vh;
+}
+h1 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 3rem;
 }
 
-button {
-    padding:.5rem;
+h2 {
     font-size: 1.5rem;
-    margin-top: 2rem;
-    background-color: transparent;
-    border: 3px solid black;
-}
-
-button:active {
-    background-color: black;
-    color: white;
+    margin-bottom: 2rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 input {
-    height: 3rem;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
-    width: 50vw;
-    font-size: 2rem;
+    width: 20vw;
+}
+.delete {
+    padding-left:20px;
+    cursor:pointer;
 }
 
-.item {
-    margin-top: 2rem;
-    font-size: 2rem;
+button {
+    margin-bottom: 2rem;
+    font-size: 1rem;
+    padding: .5rem;
+    border-radius: 10px;
+    width: 20vw;
+}
+
+.output{
+    font-size: 1.5rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 1rem;
 }
 
-#randomItem {
-    font-size: 2.5rem;
-    border: 1px solid black;
-    padding: .4rem 8rem .4rem 8rem;
-    background-color: transparent ;
+ul li{
+    font-size: 1rem;
+    list-style: none;
+}
+
+span{
+ font-size: 2rem;
+ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.x {
+    font-size: 2rem;
 }
